Disable MSVC specific compiler warnings for python dependency
* Disable C4101 'identifier' : unreferenced local variable for
  libpython.
* Disable C4018 'expression' : signed/unsigned mismatch for libpython
  and pygen.
* Disable C4244 'conversion' conversion from 'type1' to 'type2',
  possible loss of data for libpython.
* Disable C4996 The compiler encountered a deprecated declaration. for
  libpython.

[skip appveyor]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,6 +173,8 @@ ExternalProject_Add(python-cmake
         ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/python-cmake-1-dont_install_python_cmake_export_targets.patch
     COMMAND
         ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/python-cmake-2-change_pathes_to_match_current_win32_sdk_layout.patch
+    COMMAND
+        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/python-cmake-3_disable_msvc_compiler_warnings.patch
     CONFIGURE_COMMAND ""
     BUILD_COMMAND ""
     INSTALL_COMMAND ""
