Disable MSVC specific compiler warnings for libvorbis dependency
* Disable _CRT_SECURE_NO_WARNINGS about deprecated stdlib functions for
  libvorbis.
* Disable C4244 'conversion' conversion from 'type1' to 'type2',
  possible loss of data for libpython.
* Disable C4305 'identifier' : truncation from 'type1' to 'type2' for
  libpython.

[skip appveyor]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -368,6 +368,8 @@ ExternalProject_Add(libvorbis
         ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/libvorbis-6-add_libogg_as_additional_name_to_ogg_library_search.patch
     COMMAND
         ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/libvorbis-7-remove_vorbisenc_target.patch
+    COMMAND
+        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/patches/libvorbis-8-disable_msvc_compiler_warnings.patch
     CMAKE_ARGS
         -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
         -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
