Use PYTHON_VERSION parameter for python-cmake dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,7 +204,7 @@ ExternalProject_Add(python
         -DBUILD_SHARED=${BUILD_SHARED_LIBS}
         -DBUILD_STATIC=${PYTHON_BUILD_STATIC}
         -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
-        -DPY_VERSION=${PYTHON_VERSION}
+        -DPYTHON_VERSION=${PYTHON_VERSION}
         -DDOWNLOAD_SOURCES=OFF
         -DBUILD_TESTING=OFF
         -DBUILD_WININST=OFF
