--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,10 @@ init:
   - git config --global core.autocrlf true
 install:
   - '"C:\Program Files (X86)\Microsoft Visual Studio 12.0\VC\vcvarsall.bat"'
+before_build:
+  # Remove the VS Xamarin targets to reduce AppVeyor specific noise in build
+  # logs.  See also http://help.appveyor.com/discussions/problems/4569
+  - del "C:\Program Files (x86)\MSBuild\12.0\Microsoft.Common.targets\ImportAfter\Xamarin.Common.targets"
 build_script:
   - mkdir build
   - cd build
