Fix bug introduced by f40f7d8f
In the Windows SDK all libraries should be build as shared library whereas
the MacOSX SDK should be contain either static libraries or frameworks.
The intial version using `WIN32` as intial value for `BUILD_SHARED_LIBS`
didn't work out as expected.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ endif()
 
 cmake_minimum_required(VERSION ${REQUIRED_CMAKE_VERSION})
 
-option(BUILD_SHARED_LIBS "Build external projects as shared libraries." WIN32)
+option(BUILD_SHARED_LIBS "Build external projects as shared libraries." ON)
+
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING "Set the default build configuration for this build" FORCE)
 endif()
@@ -20,6 +21,7 @@ include(ExternalProject)
 set(SDK_INSTALL_DIR ${CMAKE_BINARY_DIR}/INSTALL)
 
 if(APPLE)
+    set(BUILD_SHARED_LIBS OFF)
     set(SDK_INSTALL_DIR "${SDK_INSTALL_DIR}/dep")
 endif()
 
