Don't install utility programs of libpng dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,6 +147,7 @@ ExternalProject_Add(libpng
         -DPNG_STATIC=OFF
         -DPNG_TESTS=OFF
         -DSKIP_INSTALL_EXECUTABLES=ON
+        -DSKIP_INSTALL_PROGRAMS=ON
         -DSKIP_INSTALL_FILES=ON
         -DSKIP_INSTALL_EXPORT=ON
         -DZLIB_ROOT=<INSTALL_DIR>
