--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -462,6 +462,7 @@ if(NOT APPLE)
             -DALSOFT_NO_CONFIG_UTIL=ON
             -DALSOFT_EXAMPLES=OFF
             -DALSOFT_CONFIG=OFF
+            -DALSOFT_TESTS=OFF
             -DALSOFT_HRTF_DEFS=OFF
             -DALSOFT_REQUIRE_MMDEVAPI=${WIN32}
             -DALSOFT_REQUIRE_COREAUDIO=${APPLE}
