Disable some components of the python dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -292,12 +292,12 @@ ExternalProject_Add(python
         -DENABLE_SOCKET=OFF
         -DENABLE_SPWD=OFF
         -DENABLE_SQLITE3=OFF
-        #DENABLE_SSL=OFF
+        -DENABLE_SSL=OFF
         #DENABLE_STRUCT=OFF
-        #DENABLE_SYSLOG=OFF
-        #DENABLE_TERMIOS=OFF
+        -DENABLE_SYSLOG=OFF
+        -DENABLE_TERMIOS=OFF
         -DENABLE_TESTCAPI=OFF
-        #DENABLE_TKINTER=OFF
+        -DENABLE_TKINTER=OFF
         -DENABLE_UNICODEDATA=OFF
         #DENABLE_ZLIB=OFF
     INSTALL_DIR ${PYTHON_CONFIGURE_INSTALL_DIR}
