--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_script:
   - cd build
 script:
   - cmake -G "Xcode" ..
-  - cmake --build . --config RelWithDebInfo
+  - travis_wait 40 cmake --build . --config RelWithDebInfo
