Explicit state which toolset should be used by boost build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -560,7 +560,10 @@ ExternalProject_Add(glew
 
 if(NOT WIN32)
     set(BOOST_CONFIGURE_COMMAND <SOURCE_DIR>/bootstrap.sh)
-    set(BOOST_CONFIGURE_FLAGS "macosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET}")
+    set(BOOST_CONFIGURE_FLAGS
+        toolset=darwin
+        macosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET}
+    )
     set(BOOST_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
     set(BOOST_OSX_SYSROOT ${CMAKE_OSX_SYSROOT})
     # strip concrete mac osx directory to allow boost build the detection of
@@ -569,7 +572,10 @@ if(NOT WIN32)
     get_filename_component(BOOST_OSX_SYSROOT "${BOOST_OSX_SYSROOT}" DIRECTORY)
 else()
     set(BOOST_CONFIGURE_COMMAND <SOURCE_DIR>/bootstrap.bat)
-    set(BOOST_CONFIGURE_FLAGS "debug-store=database")
+    set(BOOST_CONFIGURE_FLAGS
+        toolset=msvc
+        debug-store=database
+    )
     set(BOOST_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR}/Boost)
     set(BOOST_OSX_SYSROOT "")
 endif()
