Embed python dependency extensions into python library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -270,6 +270,7 @@ ExternalProject_Add(python
         -DPYTHON_VERSION=${PYTHON_VERSION}
         ${PYTHON_CONFIGURE_FLAGS}
         -DDOWNLOAD_SOURCES=OFF
+        -DBUILD_EXTENSIONS_AS_BUILTIN=ON
         -DBUILD_TESTING=OFF
         -DBUILD_WININST=OFF
         -DENABLE_AUDIOOP=OFF
