Only embed python extensions on Windows
For some reason the MacOSX build causes linker errors when having this
parameter enabled. Example:

```
ld: warning: could not create compact unwind for _ffi_call_unix64: does
not use RBP or RSP based frame
Undefined symbols for architecture x86_64:
  "_CFArrayGetCount", referenced from:
        _get_proxy_settings in _scproxy.o
```

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -237,7 +237,9 @@ unset(SOURCE_DIR)
 
 
 if(WIN32)
-    set(PYTHON_CONFIGURE_FLAGS "")
+    set(PYTHON_CONFIGURE_FLAGS
+        -DBUILD_EXTENSIONS_AS_BUILTIN=ON
+    )
     set(PYTHON_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
 else()
     set(PYTHON_CONFIGURE_FLAGS "-DBUILD_FRAMEWORK=ON")
@@ -270,7 +272,6 @@ ExternalProject_Add(python
         -DPYTHON_VERSION=${PYTHON_VERSION}
         ${PYTHON_CONFIGURE_FLAGS}
         -DDOWNLOAD_SOURCES=OFF
-        -DBUILD_EXTENSIONS_AS_BUILTIN=ON
         -DBUILD_TESTING=OFF
         -DBUILD_WININST=OFF
         -DENABLE_AUDIOOP=OFF
