Fix SSL issues when downloading ruby gems needed by Travis-CI
Reinstalling the ruby 1.9.3 environment seems to update the required
client certificates to avoid verification failures for SSL connections to
rubygems.org.

[skip appveyor]

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ os:
 osx_image: xcode6.4
 language: cpp
 before_script:
+  # Workaround for travis-ci/travis-ci#6700
+  - rvm reinstall 1.9.3 --disable-binary
   - mkdir build
   - cd build
 script:
